Updated CSS and additional JS test

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ button {
 
 .job-sect-info {
     font-size: 1.3rem;
-    padding: .5rem 0.5rem;
+    padding: .2rem 0.5rem 0px 0.5rem;
 }
 
 .info-companyname {
