--- a/style.css
+++ b/style.css
@@ -86,16 +86,17 @@ button {
     width: var(--width-section);
 }
 
-.job-filter-list {
+.jobfilter-list {
     color: var(--primary-col);
     display: flex;
+    font-size: 0.8rem;
     gap: 0.5rem;
 }
 
 .filter-item {
     align-items: center;
     display: flex;
-    font-size: 1.3rem;
+    font-size: 1rem;
     gap: .2rem;
     background-color: var(--netural-col-300);
     padding: 0.1rem 0rem 0.1rem .4rem;
@@ -129,6 +130,18 @@ button {
 }
 
 
+.job-count-display {
+    background-color: var(--netural-col-100);
+    border-radius: 10px;
+    box-shadow: 0px 0px 50px 1px var(--primary-col-alpha);
+    color: var(--primary-col);
+    display: flex;
+    justify-content: space-between;
+    margin-inline: auto;
+    padding: 1rem 2rem;
+    width: fit-content;
+}
+
 /* Job List */
 
 .jobs-wrapper {
@@ -136,64 +149,149 @@ button {
     width: var(--width-section);
 }
 
-.job-entry {
+.job-list {
+    display: grid;
+    gap: 1rem;
+}
+
+.job-sections { 
     align-items: center;
     background-color: var(--netural-col-100);
     border-radius: 10px;
+    border-inline-start: 4px solid transparent;
     box-shadow: 0px 0px 50px 1px var(--primary-col-alpha);
     display: grid;
-    grid-template-columns: 100px 30% 1fr;
-    padding: 1rem 2rem;
+    grid-template-columns: 100px 40% 1fr;
+    padding: 1rem 1.8rem;
 }
 
-.job-top, .job-mid, .job-bottom {
+.job-sections:hover { 
+    border-inline-start: 4px solid var(--primary-col);
+    border-radius: 0px 10px 10px 0px;
+}
+
+.sect-tags {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: end;
     gap: 1rem;
-    padding-block: 4px;
 }
 
-.job-bottom li:nth-child(-n+2)::after {
-    content: '\2022';
-    display: inline;
-    padding-inline-start: 1rem;
-    position: relative;
+.filter-tag-btn {
+    border: none;
+    background-color: var(--netural-col-300);
+    border-radius: 5px;
+    color: var(--primary-col);
+    font-family: var(--font-weight-700);
+    padding-block: 5px;
 }
 
-.job-company {
+.filter-tag-btn:hover {
+    background-color: var(--primary-col);
+    color: var(--netural-col-100);
+}
+
+/* Job List Tags */
+
+.sect-job-details {
+    display: grid;
+    gap: 0.5rem;
+}
+
+.info-companyname {
     color: var(--primary-col);
     font-size: 1.1rem;
     font-weight: var(--font-weight-700);
 }
 
-.job-posted {
+[data-new] {
+    background-color: var(--primary-col);
+    border-radius: 1vw;
+    color: var(--netural-col-100);
+    font-size: 0.8rem;
+    font-weight: var(--font-weight-700);
+    text-transform: uppercase;
+    padding: 4px 6px 2px 6px;
+}
+
+[data-featured="true"] {
+    background-color: var(--netural-col-500);
+    border-radius: 1vw;
+    color: var(--netural-col-100);
+    font-size: 0.8rem;
+    font-weight: var(--font-weight-700);
+    text-transform: uppercase;
+    padding: 4px 6px 2px 6px;
+}
+
+[data-new="false"] {
+    display: none;
+}
+
+[data-featured="false"] {
+    display: none;
+}
+
+.job-details-sect-3 {
     color: var(--netural-col-400);
     font-size: 1.1rem;
 }
 
-.job-position {
+.info-position {
     color: var(--netural-col-500);
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-weight: var(--font-weight-700);
 }
 
-.job-tags {
-    justify-content: flex-end;
-    display: flex;
-    flex-basis: content;
-    gap: 1rem;
-}
-
-.job-tag-btn {
-    border: none;
-    background-color: var(--netural-col-300);
+ .job-sections:hover .info-position{ 
     color: var(--primary-col);
+    font-weight: var(--font-weight-700);
 }
 
-.job-tag-btn:hover {
-    background-color: var(--primary-col);
-    border-radius: 5px;
-    color: var(--netural-col-100);
+.job-details-sect-3 span:nth-child(-n+2)::after {
+    content: '\2022';
+    display: inline;
+    font-size: 1rem;
+    padding-inline: 0.4rem;
+    position: relative;
 }
+
+@media screen and (width <= 680px){
+    .job-filter{
+        width: calc(100% - 2rem );
+    }
+
+    .job-count-display{ margin-block-end: 2rem; }
+
+    .job-list {
+        gap: 4rem;
+        margin-inline: 1rem;
+    }
+
+    .job-details {
+        align-items: start;
+        display: flex;
+        font-size: clamp(.8rem, 6vw, 1rem);
+        gap: .3rem;
+    }
+
+    .job-sections { 
+        grid-template-columns: 1fr;
+        gap: 1rem; 
+        grid-template-rows: 20px 1fr 1fr;
+    }
+
+    .info-position {
+        font-size: clamp(.8rem, 6vw, 1rem);
+    }
+
+    .sect-tags { justify-content: start;}
+    img {
+        position: relative;
+        top: -26px;
+    }
+}
+
 
 .attribution {
     font-size: 11px;
